hphp/hack/test/typecheck/new_inference/oldtypehole/t28246566.php.exp
File "t28246566.php", line 12, characters 12-13:
Invalid return type (Typing[4110])
  File "t28246566.php", line 9, characters 41-43:
  Expected `int`
  File "t28246566.php", line 9, characters 41-43:
  This type argument to `Vector` must match exactly (it is invariant)
  File "t28246566.php", line 6, characters 20-27:
  But got `arraykey`
  File "t28246566.php", line 6, characters 20-27:
  This type argument to `Vector` must match exactly (it is invariant)
